--- a/styles/bio.css
+++ b/styles/bio.css
@@ -62,4 +62,22 @@ li {
 html {
   box-sizing: border-box;
   font-family: "AvenirNext LT Pro";
+}
+
+.hero {
+  background-image: linear-gradient(to right bottom, rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url(../assets/Images/hero-bio.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  height: 13rem;
+  width: 100vw;
+  position: relative;
+}
+.hero__text {
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 600;
+  padding-left: 1rem;
+  position: absolute;
+  top: 43%;
 }/*# sourceMappingURL=bio.css.map */
