--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,2 +1,20 @@
 @use './partials/index' as *;
 
+.hero {
+  background-image: linear-gradient(to right bottom, rgba($color: $primary-background, $alpha: 0.5), rgba($color: $primary-background, $alpha: 0.5)), url(../assets/Images/hero-bio.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  height: 13rem;
+  width: 100vw;
+  position: relative;
+    
+  &__text {
+    font-size: 1.6rem;
+    color: $primary-text;
+    font-weight: 600;
+    padding-left: 1rem;
+    position: absolute;
+    top: 43%;
+  }
+}
