--- a/styles/bio.css
+++ b/styles/bio.css
@@ -80,4 +80,37 @@ html {
   padding-left: 1rem;
   position: absolute;
   top: 43%;
+}
+
+.about {
+  padding: 1rem 1rem;
+}
+.about__title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding-bottom: 0.6rem;
+}
+.about__image {
+  width: 100%;
+}
+.about__quote, .about__quote-author {
+  font-size: 0.875rem;
+  font-weight: 700;
+  color: #323232;
+  line-height: 1.375rem;
+  margin-top: 0.6rem;
+}
+.about__band-name {
+  font-size: 0.875rem;
+  color: #323232;
+  font-weight: 600;
+  line-height: 2rem;
+  margin-top: 0.8rem;
+}
+.about__info {
+  font-size: 0.8125rem;
+  color: #323232;
+  font-weight: 400;
+  line-height: 1.125rem;
+  margin-top: 0.6rem;
 }/*# sourceMappingURL=bio.css.map */
