--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -18,3 +18,45 @@
     top: 43%;
   }
 }
+
+.about {
+  padding: 1rem 1rem;
+
+  &__title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding-bottom: 0.6rem;
+  }
+
+  &__image {
+    width: 100%;
+  }
+
+  &__quote {
+    font-size: 0.875rem;
+    font-weight: 700;
+    color: $primary-background;
+    line-height: 1.375rem;
+    margin-top: 0.6rem;
+  }
+
+  &__quote-author {
+    @extend .about__quote;
+  }
+
+  &__band-name {
+    font-size: 0.875rem;
+    color: $primary-background;
+    font-weight: 600;
+    line-height: 2rem;
+    margin-top: 0.8rem;
+  }
+
+  &__info {
+    font-size: 0.8125rem;
+    color: $primary-background;
+    font-weight: 400;
+    line-height: 1.125rem;
+    margin-top: 0.6rem;
+  }
+}
