--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,76 +1,3 @@
-a {
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-.logo {
-  font-size: 1.5rem;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: #fff;
-}
-
-.header {
-  background-color: #323232;
-}
-.header__logo {
-  text-align: center;
-  padding: 1rem;
-}
-.header__list {
-  display: flex;
-  justify-content: space-around;
-}
-.header__link {
-  padding-bottom: 1rem;
-  width: 100%;
-  text-align: center;
-}
-.header__link--active {
-  border-bottom: 0.25rem solid #fff;
-}
-.header__item {
-  color: #fff;
-}
-
-.footer {
-  background-color: #323232;
-  color: #fff;
-  padding: 1rem;
-}
-
-.socials__title {
-  font-size: 1.5rem;
-  font-weight: 600;
-  padding: 1rem 0;
-}
-.socials__icon:nth-child(n+1) {
-  padding-left: 1.8rem;
-}
-
-.details {
-  font-size: 0.8125rem;
-  height: 100%;
-}
-.details__name {
-  font-weight: 600;
-  padding: 1rem 0;
-}
-.details__email {
-  padding-top: 1rem;
-}
-
-.copyright__logo {
-  padding-top: 4rem;
-}
-.copyright__text {
-  font-size: 0.8125rem;
-  padding-top: 1rem;
-}
-
 @font-face {
   font-family: "AvenirNext LT Pro";
   src: url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff") format("woff"), url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff2") format("woff2"), url("../../assets/Font/Avenir-TTF/AvenirNextLTPro.ttf") format("ttf"), url("../../assets/Font/Avenir-OTF/AvenirNextLTPro-Regular.otf") format("otf");
@@ -89,6 +16,169 @@ li {
   font-weight: 700;
   font-style: normal;
 }
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+.logo {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.header {
+  background-color: #323232;
+}
+@media screen and (min-width: 768px) {
+  .header {
+    display: flex;
+    align-items: flex-end;
+  }
+}
+.header__logo {
+  text-align: center;
+  padding: 1rem;
+}
+.header__list {
+  display: flex;
+  justify-content: space-around;
+}
+.header__link {
+  padding-bottom: 1rem;
+  width: 100%;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .header__link {
+    margin-left: 3rem;
+  }
+}
+.header__link--active {
+  border-bottom: 0.25rem solid #fff;
+}
+.header__item {
+  color: #fff;
+}
+
+.footer {
+  background-color: #323232;
+  color: #fff;
+  padding: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 2rem 2rem;
+  }
+}
+.footer__logo {
+  padding-top: 4rem;
+}
+@media screen and (min-width: 768px) {
+  .footer__logo {
+    order: 2;
+    width: 50%;
+    padding-top: 0;
+    text-align: right;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .socials {
+    display: flex;
+    order: 1;
+    width: 50%;
+    justify-content: flex-start;
+    align-items: center;
+  }
+}
+.socials__title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 600;
+}
+@media screen and (min-width: 768px) {
+  .socials__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+  }
+}
+@media screen and (min-width: 768px) {
+  .socials__icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 41%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .socials__icon {
+    width: 1.3rem;
+    height: 1.3rem;
+  }
+}
+.socials__icon:nth-child(n+1) {
+  padding-left: 1.8rem;
+}
+@media screen and (min-width: 768px) {
+  .socials__icon:nth-child(n+1) {
+    padding-left: 0;
+  }
+}
+
+.details {
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+@media screen and (min-width: 768px) {
+  .details {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+    display: flex;
+    order: 3;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 1.5rem;
+  }
+}
+.details__name {
+  font-weight: 600;
+  padding: 1rem 0;
+}
+.details__email {
+  padding-top: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .copyright {
+    order: 4;
+    margin-top: 1.5rem;
+  }
+}
+.copyright__text {
+  font-style: 0.8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+@media screen and (min-width: 768px) {
+  .copyright__text {
+    font-style: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+  }
+}
+
 *,
 *:before,
 *:after {
@@ -111,51 +201,141 @@ html {
   width: 100vw;
   position: relative;
 }
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 31rem;
+  }
+}
 .hero__text {
-  font-size: 1.6rem;
-  color: #fff;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: 600;
-  padding-left: 1rem;
+  color: #fff;
+  padding-left: 16px;
   position: absolute;
   top: 43%;
+}
+@media screen and (min-width: 768px) {
+  .hero__text {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 600;
+    top: 50%;
+    left: 3%;
+  }
 }
 
 .about, .gallery {
   padding: 1rem 1rem;
 }
+@media screen and (min-width: 768px) {
+  .about__content {
+    padding: 1rem 4rem;
+  }
+}
 .about__title, .gallery__title {
   font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: 600;
   padding-bottom: 0.6rem;
+}
+@media screen and (min-width: 768px) {
+  .about__title, .gallery__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    margin-left: 1rem;
+  }
 }
 .about__image, .gallery__image {
   width: 100%;
 }
 .about__quote, .about__quote-author {
   font-size: 0.875rem;
-  font-weight: 700;
-  color: #323232;
   line-height: 1.375rem;
+  font-weight: 600;
+  color: #323232;
   margin-top: 0.6rem;
+}
+@media screen and (min-width: 768px) {
+  .about__quote, .about__quote-author {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+    letter-spacing: 0.036rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__quote-author {
+    font-size: 1.125rem;
+  }
 }
 .about__band-name {
   font-size: 0.875rem;
-  color: #323232;
+  line-height: 1.375rem;
   font-weight: 600;
-  line-height: 2rem;
+  color: #323232;
   margin-top: 0.8rem;
+}
+@media screen and (min-width: 768px) {
+  .about__band-name {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__info-container {
+    display: flex;
+  }
 }
 .about__info {
   font-size: 0.8125rem;
-  color: #323232;
-  font-weight: 400;
   line-height: 1.125rem;
+  font-weight: 400;
+  color: #323232;
   margin-top: 0.6rem;
+}
+@media screen and (min-width: 768px) {
+  .about__info {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__info--right {
+    margin-left: 2.5rem;
+  }
 }
 
 .gallery {
   background-color: #fafafa;
 }
+@media screen and (min-width: 768px) {
+  .gallery {
+    padding: 2rem 2rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .gallery__title {
+    margin-left: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .gallery__images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
 .gallery__image {
   padding-bottom: 0.6rem;
+}
+@media screen and (min-width: 768px) {
+  .gallery__image {
+    height: 8rem;
+    width: 14rem;
+    padding-bottom: 1rem;
+  }
 }/*# sourceMappingURL=bio.css.map */
