--- a/styles/bio.css
+++ b/styles/bio.css
@@ -28,6 +28,7 @@ li {
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 600;
+  font-weight: 400;
   text-transform: uppercase;
   color: #fff;
 }
@@ -39,6 +40,12 @@ li {
   .header {
     display: flex;
     align-items: flex-end;
+    padding-left: 1rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header {
+    padding: 0 8rem;
   }
 }
 .header__logo {
@@ -79,6 +86,11 @@ li {
     padding: 2rem 2rem;
   }
 }
+@media screen and (min-width: 1280px) {
+  .footer {
+    padding: 4rem 8rem;
+  }
+}
 .footer__logo {
   padding-top: 4rem;
 }
@@ -110,7 +122,18 @@ li {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 600;
+    font-size: 2rem;
   }
+}
+@media screen and (min-width: 1280px) {
+  .socials__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+  }
+}
+.socials__icons {
+  padding-top: 1rem;
 }
 @media screen and (min-width: 768px) {
   .socials__icons {
@@ -126,13 +149,8 @@ li {
     height: 1.3rem;
   }
 }
-.socials__icon:nth-child(n+1) {
-  padding-left: 1.8rem;
-}
-@media screen and (min-width: 768px) {
-  .socials__icon:nth-child(n+1) {
-    padding-left: 0;
-  }
+.socials__icon:not(:first-child) {
+  padding-left: 2rem;
 }
 
 .details {
@@ -152,26 +170,62 @@ li {
     margin-top: 1.5rem;
   }
 }
+@media screen and (min-width: 1280px) {
+  .details {
+    font-style: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    justify-content: flex-start;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .details__card:not(:first-child) {
+    padding-left: 3rem;
+  }
+}
 .details__name {
   font-weight: 600;
   padding: 1rem 0;
 }
+@media screen and (min-width: 768px) {
+  .details__name {
+    padding-bottom: 1.5rem;
+  }
+}
 .details__email {
   padding-top: 1rem;
 }
+@media screen and (min-width: 768px) {
+  .details__email {
+    padding-top: 1.5rem;
+  }
+}
 
+.copyright {
+  margin-top: 1rem;
+}
 @media screen and (min-width: 768px) {
   .copyright {
     order: 4;
-    margin-top: 1.5rem;
+    margin-top: 3rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .copyright {
+    margin-top: 3rem;
   }
 }
 .copyright__text {
-  font-style: 0.8125rem;
-  line-height: 1.125rem;
-  font-weight: 400;
+  font-size: 0.6875rem;
 }
 @media screen and (min-width: 768px) {
+  .copyright__text {
+    font-style: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+  }
+}
+@media screen and (min-width: 1280px) {
   .copyright__text {
     font-style: 0.875rem;
     line-height: 1.25rem;
@@ -211,7 +265,7 @@ html {
   line-height: 2rem;
   font-weight: 600;
   color: #fff;
-  padding-left: 16px;
+  padding-left: 1rem;
   position: absolute;
   top: 43%;
 }
@@ -224,13 +278,31 @@ html {
     left: 3%;
   }
 }
+@media screen and (min-width: 1280px) {
+  .hero__text {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 600;
+    padding-left: 6rem;
+  }
+}
 
-.about, .gallery {
+.about {
   padding: 1rem 1rem;
+}
+@media screen and (min-width: 1280px) {
+  .about {
+    padding: 4rem 8rem;
+  }
 }
 @media screen and (min-width: 768px) {
   .about__content {
     padding: 1rem 4rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .about__content {
+    padding: 1rem 6rem;
   }
 }
 .about__title, .gallery__title {
@@ -245,6 +317,13 @@ html {
     line-height: 2.75rem;
     font-weight: 600;
     margin-left: 1rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about__title, .gallery__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
   }
 }
 .about__image, .gallery__image {
@@ -275,9 +354,16 @@ html {
   line-height: 1.375rem;
   font-weight: 600;
   color: #323232;
-  margin-top: 0.8rem;
+  margin-top: 1.5rem;
 }
 @media screen and (min-width: 768px) {
+  .about__band-name {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+  }
+}
+@media screen and (min-width: 1280px) {
   .about__band-name {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -303,18 +389,36 @@ html {
     font-weight: 400;
   }
 }
+@media screen and (min-width: 1280px) {
+  .about__info {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
 @media screen and (min-width: 768px) {
   .about__info--right {
     margin-left: 2.5rem;
   }
 }
+@media screen and (min-width: 1280px) {
+  .about__info--right {
+    margin-left: 3rem;
+  }
+}
 
 .gallery {
+  padding: 1rem 1rem 0 1rem;
   background-color: #fafafa;
 }
 @media screen and (min-width: 768px) {
   .gallery {
     padding: 2rem 2rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery {
+    padding: 4rem 8rem;
   }
 }
 @media screen and (min-width: 768px) {
@@ -337,5 +441,11 @@ html {
     height: 8rem;
     width: 14rem;
     padding-bottom: 1rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .gallery__image {
+    height: 11rem;
+    width: 20rem;
   }
 }/*# sourceMappingURL=bio.css.map */
