--- a/styles/bio.css
+++ b/styles/bio.css
@@ -35,6 +35,7 @@ button {
   text-transform: uppercase;
   padding: 0.6rem;
   border-radius: 0.3125rem;
+  cursor: pointer;
 }
 
 .logo {
@@ -555,25 +556,27 @@ html {
 .form-container__name, .form-container__comment {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1rem;
+  margin-bottom: 4px;
 }
 .form-container__name-input {
-  height: 2rem;
+  height: 36px;
   background-color: #fafafa;
   border: 1px solid #afafaf;
-  border-radius: 3px;
+  border-radius: 4px;
+  padding: 12px;
 }
 @media screen and (min-width: 786px) {
   .form-container__name-input {
-    height: 3rem;
+    height: 48px;
   }
 }
 .form-container__comment-input {
   height: 6rem;
   background-color: #fafafa;
   border: 1px solid #afafaf;
-  border-radius: 3px;
+  border-radius: 4px;
   resize: none;
+  padding: 16px;
 }
 @media screen and (min-width: 786px) {
   .form-container__button {
