--- a/styles/bio.css
+++ b/styles/bio.css
@@ -556,14 +556,15 @@ html {
 .form-container__name, .form-container__comment {
   display: flex;
   flex-direction: column;
-  margin-bottom: 4px;
+  margin-bottom: 0.25rem;
 }
 .form-container__name-input {
-  height: 36px;
+  height: 2.25rem;
   background-color: #fafafa;
-  border: 1px solid #afafaf;
-  border-radius: 4px;
-  padding: 12px;
+  border: 0.0625rem solid #afafaf;
+  border-radius: 0.25rem;
+  padding: 0.75rem;
+  margin-bottom: 0.25rem;
 }
 @media screen and (min-width: 786px) {
   .form-container__name-input {
@@ -573,10 +574,11 @@ html {
 .form-container__comment-input {
   height: 6rem;
   background-color: #fafafa;
-  border: 1px solid #afafaf;
-  border-radius: 4px;
+  border: 0.0625rem solid #afafaf;
+  border-radius: 0.25rem;
   resize: none;
-  padding: 16px;
+  padding: 1rem;
+  margin-bottom: 0.25rem;
 }
 @media screen and (min-width: 786px) {
   .form-container__button {
@@ -671,5 +673,5 @@ html {
 
 .form-container,
 .comment-card {
-  border-bottom: 1px solid #e1e1e1;
+  border-bottom: 0.0625rem solid #e1e1e1;
 }/*# sourceMappingURL=bio.css.map */
