--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,18 +1,18 @@
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff") format("woff"), url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff2") format("woff2"), url("../../assets/Font/Avenir-TTF/AvenirNextLTPro.ttf") format("ttf"), url("../../assets/Font/Avenir-OTF/AvenirNextLTPro-Regular.otf") format("otf");
+  src: url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff") format("woff"), url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Regular.woff2") format("woff2"), url("../assets/Font/Avenir-TTF/AvenirNextLTPro.ttf") format("ttf"), url("../assets/Font/Avenir-OTF/AvenirNextLTPro-Regular.otf") format("otf");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Demi.woff") format("woff"), url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Demi.woff2") format("woff2"), url("../../assets/Font/Avenir-TTF/AvenirNextLTProDemi.ttf") format("ttf"), url("../../assets/Font/Avenir-OTF/AvenirNextLTPro-Demi.otf") format("otf");
+  src: url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Demi.woff") format("woff"), url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Demi.woff2") format("woff2"), url("../assets/Font/Avenir-TTF/AvenirNextLTProDemi.ttf") format("ttf"), url("../assets/Font/Avenir-OTF/AvenirNextLTPro-Demi.otf") format("otf");
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
   font-family: "AvenirNext LT Pro";
-  src: url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Bold.woff") format("woff"), url("../../assets/Font/Avenir-WOFF/AvenirNextLTPro-Bold.woff2") format("woff2"), url("../../assets/Font/Avenir-TTF/AvenirNextLTProBold.ttf") format("ttf"), url("../../assets/Font/Avenir-OTF/AvenirNextLTPro-Bold.otf") format("otf");
+  src: url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Bold.woff") format("woff"), url("../assets/Font/Avenir-WOFF/AvenirNextLTPro-Bold.woff2") format("woff2"), url("../assets/Font/Avenir-TTF/AvenirNextLTProBold.ttf") format("ttf"), url("../assets/Font/Avenir-OTF/AvenirNextLTPro-Bold.otf") format("otf");
   font-weight: 700;
   font-style: normal;
 }
@@ -283,16 +283,21 @@ button {
 
 html {
   box-sizing: border-box;
-  font-family: "AvenirNext LT Pro";
+  font-family: "AvenirNext LT Pro", sans-serif;
 }
 
 .hero {
-  background-image: linear-gradient(to right bottom, rgba(50, 50, 50, 0.5), rgba(50, 50, 50, 0.5)), url(../assets/Images/hero-bio.jpg);
+  background-image: url(../assets/Images/hero-bio.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 13rem;
   width: 100%;
   position: relative;
+}
+.hero--overlay {
+  background-color: rgba(50, 50, 50, 0.5);
+  height: 100%;
+  width: 100%;
 }
 @media screen and (min-width: 786px) {
   .hero {
